fix: subject page header overflow

--- a/src/app/styles/components/Books.module.scss
+++ b/src/app/styles/components/Books.module.scss
@@ -3,7 +3,7 @@
 // main container for the page
 .books {
   gap: rem(40);
-  padding: rem(55) rem(5);
+  padding-block: rem(55);
 }
 
 .books__header {
